@@ -31,14 +31,13 @@ void DataReaderListenerImpl::on_data_available(DDS::DataReader_ptr reader)
       exit(1);
     }
 
-    MessageDataReaderImpl* dr_servant =
-      reference_to_servant< MessageDataReaderImpl,
-                            MessageDataReader_ptr>(message_dr.in());
-
     Messenger::Message message;
     DDS::SampleInfo si ;
     DDS::ReturnCode_t status = message_dr->take_next_sample(message, si) ;
     // Alternate code to read directlty via the servant
+    //MessageDataReaderImpl* dr_servant =
+    //  reference_to_servant< MessageDataReaderImpl,
+    //                        MessageDataReader_ptr>(message_dr.in());
     //DDS::ReturnCode_t status = dr_servant->take_next_sample(message, si) ;
 
     if (status == DDS::RETCODE_OK) {
