@@ -1,3 +1,12 @@
+Fri Sep 23 16:18:49 2005  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * DevGuideExamples/DDS/Messenger/DataReaderListener.cpp:
+        * bin/DCPS/CPPTemplate.pm:
+        * dds/DCPS/DataBlockLockPool.cpp:
+        * dds/DCPS/InstanceState.cpp:
+
+          Clean up some gcc warnings.
+
 Fri Sep 23 15:31:37 2005  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * DDS_release_notes.txt:
@@ -19,8 +28,8 @@ Fri Sep 23 15:31:37 2005  Paul Calabrese  <calabrese_p@ociweb.com>
 
           Add a new configuration option for Nagle's algorithm
           (TCP_NODELAY).  The default is to disable Nagle's algorithm.
-          This was uncovered by some latency testing.  Some 
-          performance tests with small sample sizes may benefit 
+          This was uncovered by some latency testing.  Some
+          performance tests with small sample sizes may benefit
           from enabling this algorithm.
 
 Wed Sep  7 08:47:48 2005  Paul Calabrese  <calabrese_p@ociweb.com>
